ajouté sur navbar un li pour creer un potin <<create gossip>>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/gossip">Gossip</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/gossips/new">Create Gossip</a>
+      </li>
     </ul>
   </div>
 </nav>
