--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -3,7 +3,7 @@
 
 <h2> Create Account</h2>
 
-<%=form_tag "/user", method: :post do%>
+<%=form_tag url_for(action: 'create'),  method: :post do%>
 
  <div>
   <%= label_tag :first_name%>
@@ -20,7 +20,7 @@
  <div>
   <div>
   <%= label_tag :description%>
-  <%= text_field_tag :description%>
+  <%= text_field_tag :description %>
  </div>
   <div>
   <%= label_tag :age%>
